# GuiClass

./: .gitignore  CMakeLists.txt  GuiClass.cpp  GuiClass.sln  GuiClass.vcxproj  GuiClass.vcxproj.filters  Makefile  README.md  main.cpp
.github/workflows/: build.yml  todo.yml
src/: Ribbon.h  StatusBar.h  element.h  globals.cpp  globals.h  logging.h  main.cpp  process.h  ribbon.h  statusbar.h  utils.h
